# PRC_2025_Likable-ant

./: README.md  pyproject.toml  requirements.txt
scripts/: Stage_1_Rebuild.py  Stage_2_ERA5_Features.py  Stage_3_Filter_TAS.py  Stage_4_TOW.py  Stage_5.1_Acropole_Only_with_KNN.py  Stage_5.2_Add_OpenAP_to_Acropole.py  Stage_5_Fuel_Calculation.py  Stage_6.1_Regenerate_training_data.py  Stage_6.2_Train_Multiplier.py.py  Stage_6.3_Create_Multiplier_Trajectory.py  Stage_7_Feature_Engineering_Multiplier.py  Stage_8_Imputation.py  Stage_8_Imputation_LightGBM.py  Stage_8_Tow_Merge_Imputation_LightGBM.py  Stage_9.1_Fuel_pred_Catboost.py  Stage_9_Fuel_Prediction.py  Stage_9_Fuel_predict_CV.py
